# 9815_HW_SOA

./: README.md  interprocess.cpp
p1/: CMakeLists.txt  test_interprocess.cpp
p2-3/: CMakeLists.txt  products.hpp  productservice.hpp  soa.hpp  test_products.cpp
